--- a/src/app/modules/user/layouts/profil/profil.component.scss
+++ b/src/app/modules/user/layouts/profil/profil.component.scss
@@ -15,7 +15,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 50%;
+      width: 40%;
       img {
         width: 100%;
         border-radius: 50%;
@@ -27,14 +27,48 @@
       flex-direction: column;
       align-items: flex-start;
       justify-content: space-evenly;
-      width: 50%;
+      width: 60%;
       padding: 2rem;
       .pseudo {
         font-size: 1.5rem;
         font-weight: bold;
       }
+
+      .followers {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        .number {
+          font-size: 1rem;
+          font-weight: bold;
+        }
+      }
+
       .bio {
         font-size: 1rem;
+        width: 100%;
+        span {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          p {
+            width: 90%;
+            overflow: hidden;
+            textarea {
+              width: 100%;
+            }
+          }
+          i {
+            font-size: 18px;
+            cursor: pointer;
+          }
+        }
+
       }
     }
   }
