input-search-bar+new-navbar+edit-profile
need to be style

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,10 +9,9 @@ $my-typography: mat-typography-config(
 );
 @include mat-core($my-typography);
 
-
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
 body {
   margin: 0;
@@ -23,29 +22,9 @@ a {
 }
 
 .main {
-  background-color: #FAFAFA;
+  background-color: #fafafa;
   position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
 }
-
-
-@media screen and (min-width: 600px) {
-  .main {
-    width: 90vw;
-  }
-
-}
-
-@media screen and (min-width: 1200px) {
-  .main {
-    width: 85vw;
-  }
-
-}
-
 
 $my-app-accent: mat-palette($mat-pink, 500, 900, A100);
 $my-app-warn: mat-palette($mat-deep-orange);
