--- a/src/app/layouts/user-layout/navbar/navbar.component.html
+++ b/src/app/layouts/user-layout/navbar/navbar.component.html
@@ -1,14 +1,128 @@
-<div class="navbar">
-  <div class="navbar-logo">
-    <img src="/assets/images/instaclo.png" alt="image">
-    <h3>InstaClo</h3>
+<div class="container-fluid pt-2 d-block d-md-none bg-light">
+  <div class="row d-flex align-items-center">
+    <div class="col-4">
+      <a class="text-dark h2" href="#"> Instaclo</a>
+    </div>
+    <div class="col-8">
+      <form class="d-flex flex-column" (ngSubmit)="onSubmit()">
+        <div class="row">
+          <div class="col-10">
+            <input
+              class="form-control me-2"
+              type="search"
+              [formControl]="pseudo"
+              (keyup)="search($event)"
+              placeholder="Search by name"
+            />
+          </div>
+          <div class="col-2">
+            <button class="btn p-0" type="submit">
+              <i class="bi bi-search"></i>
+            </button>
+          </div>
+        </div>
+
+        <div class="mt-2 ms-1 dropdownSearch" *ngIf="bUser">
+          <a class="dropdown-item" href="#"
+            >{{ user.pseudo }} ({{ user.lastName }} {{ user.firstName }})</a
+          >
+          <hr />
+        </div>
+      </form>
+    </div>
   </div>
-
-  <ul class="navbar-container">
-    <li><a [routerLink]="['/user/home']" class="navbar-item"><i class="bi bi-house-door-fill"></i><span>Accueil</span></a></li>
-    <li><a [routerLink]="['/user/profil']" class="navbar-item"><i class="bi bi-person"></i><span>Profil</span></a></li>
-    <li><a [routerLink]="['/user/chat']" class="navbar-item"><i class="bi bi-chat-dots"></i><span>Chat</span></a></li>
-    <li><a (click)="signOut()" class="navbar-item"><i class="bi bi-power"></i><span>Déconnexion</span></a></li>
-  </ul>
-
 </div>
+
+<nav class="navbar navbar-expand navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand ms-3 h2 text-dark" href="#"
+      ><img
+        src="/assets/images/instaclo.png"
+        width="36"
+        height="36"
+        class="me-2"
+      />
+      Instaclo</a
+    >
+    <div class="navbarContent" id="navbarSupportedContent">
+      <form
+        class="d-md-flex mx-auto d-none flex-column"
+        (ngSubmit)="onSubmit()"
+      >
+        <div class="row">
+          <div class="col-10">
+            <input
+              class="form-control me-2"
+              type="search"
+              [formControl]="pseudo"
+              (keyup)="search($event)"
+              placeholder="Search by name"
+            />
+          </div>
+          <div class="col-2">
+            <button class="btn p-0" type="submit">
+              <i class="bi bi-search"></i>
+            </button>
+          </div>
+        </div>
+
+        <div class="mt-2 ms-1 dropdownSearch" *ngIf="bUser">
+          <a class="dropdown-item" href="#"
+            >{{ user.pseudo }} ({{ user.lastName }} {{ user.firstName }})</a
+          >
+          <hr />
+        </div>
+      </form>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item px-3 px-md-0">
+          <a class="nav-link active" [routerLink]="['/user/home']"
+            ><i class="bi bi-house-door-fill"></i
+          ></a>
+        </li>
+        <li class="nav-item px-3 px-md-0">
+          <a class="nav-link" [routerLink]="['/user/chat']"
+            ><i class="bi bi-send"></i>
+          </a>
+        </li>
+        <li class="nav-item dropdown d-none d-md-block">
+          <a
+            class="nav-link dropdown"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <i class="bi bi-person-circle"></i>
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>
+              <a class="dropdown-item" [routerLink]="['/user/profil']"
+                >Profil</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" [routerLink]="['/user/edit-profil']"
+                >Paramètres</a
+              >
+            </li>
+            <li><hr class="dropdown-divider" /></li>
+            <li (click)="signOut()">
+              <a class="dropdown-item" href="#">Déconnexion</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item px-3 px-md-0 d-block d-md-none">
+          <a class="nav-link" [routerLink]="['/user/profil']">
+            <i class="bi bi-person-circle"></i>
+          </a>
+        </li>
+        <li class="nav-item px-3 px-md-0 d-block d-md-none">
+          <a class="nav-link" (click)="signOut()"
+            ><i class="bi bi-power"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
