--- a/src/app/layouts/user-layout/navbar/navbar.component.scss
+++ b/src/app/layouts/user-layout/navbar/navbar.component.scss
@@ -1,100 +1,53 @@
+i {
+  font-size: 1.5rem;
+  margin: 5px;
+}
+.dropdownSearch {
+  position: absolute;
+  top: 55px;
+}
+
+.text-dark {
+  letter-spacing: 0.3rem;
+}
+
 .navbar {
-  background-color: #FFFFFF;
-  position: fixed;
-  z-index: 1;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  height: 8vh;
-  width: 100%;
-  border-top: #e8e7e7 0.05rem solid;
-  .navbar-logo {
-    display: none;
-    h3 {
+  .navbar-brand {
+    display: flex;
+    align-items: center;
+    @media (max-width: 767.98px) {
       display: none;
     }
   }
-  .navbar-container {
+
+  .navbarContent {
     display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    justify-content: space-evenly;
-    width: 100%;
-    align-items: center;
-    min-height: 100%;
-    margin: 0;
-    padding: 0;
-    li {
-      display: flex;
+    flex-grow: 1;
+    .dropdown-menu {
+      margin-left: -105px;
+      margin-top: 12px;
     }
-    .navbar-item {
-      cursor: pointer;
-      color: #000000;
-      i {
-        font-size: 1.5rem;
-      }
-      span {
-        display: none;
-      }
-    }
-  }
-}
 
-@media screen and (min-width: 600px) {
-  .navbar {
-    top: 0;
-    bottom: unset;
-    border-right: #e8e7e7 0.05rem solid;
-    flex-direction: row;
-    height: 100%;
-    width: 10vw;
-    .navbar-logo {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 4rem;
-      img {
-        width: 40%;
-      }
-
-    }
-    .navbar-container {
-      flex-direction: column;
-      justify-content: flex-start;
-      .navbar-item {
-        margin-top: 5rem;
-      }
-    }
-  }
-}
-
-
-@media screen and (min-width: 1200px) {
-  .navbar {
-    width: 15vw;
-    .navbar-logo {
-      h3 {
-        display: block;
-        margin-top: 1rem;
-        font-weight: bold;
-        font-style: italic;
-        font-size: 1.2rem;
-      }
-    }
-    .navbar-container {
-      justify-content: start;
-      .navbar-item {
+    .navbar-nav {
+      @media (max-width: 767.98px) {
         display: flex;
-        align-items: center;
-        justify-content: center;
-
-        span {
-          display: flex;
-          margin-left: 1rem;
-        }
+        justify-content: space-around;
+        width: 100%;
       }
     }
   }
+  @media (max-width: 767.98px) {
+    width: 100%;
+    bottom: 0;
+    z-index: 99999;
+    position: fixed;
+    justify-content: center;
+  }
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
 }
