--- a/src/app/modules/user/layouts/profil/profil.component.html
+++ b/src/app/modules/user/layouts/profil/profil.component.html
@@ -1,73 +1,64 @@
-
-<div class="main">
-
-  <div class="profil">
-    <div class="header">
-      <div class="content">
-        <img src="/assets/images/blank-profile.png" alt="image">
+<div class="main container-fluid mx-auto pt-5 pb-5">
+  <div class="profil container">
+    <div class="row">
+      <div class="col-4 text-center">
+        <img
+          src="/assets/images/blank-profile.png"
+          alt="image"
+          class="rounded-circle imgProfil"
+        />
       </div>
-      <div class="description">
-        <p class="pseudo">{{ user?.firstName }} {{ user?.lastName }}</p>
-        <div class="followers">
-          <div class="number">X photos</div>
-          <div class="number">X following</div>
-          <div class="number">X followers</div>
+      <div class="col-8">
+        <div class="row">
+          <div class="col-12">
+            <p class="pseudo">{{ user?.firstName }} {{ user?.lastName }}</p>
+          </div>
+          <div class="col-4">X photos</div>
+          <div class="col-4">X followin</div>
+          <div class="col-4">X followers</div>
+          <div class="col-12">{{ user?.pseudo }}</div>
+          <div class="col-12">{{ user?.bio }}</div>
+          <div class="col-12">
+            <button
+              class="btn btn-secondary btn-sm"
+              routerLink="/user/edit-profil"
+            >
+              Modifier le profil
+            </button>
+          </div>
         </div>
-        <p class="bio">
-          {{ user?.pseudo }}<br/>
-          <span *ngIf="isEditable">
-            <p>
-              <textarea matInput
-                cdkTextareaAutosize
-                cdkAutosizeMinRows="3"
-                cdkAutosizeMaxRows="8"
-                [formControl]="bio"></textarea>
-            </p>
-            <i class="bi bi-check-lg" (click)="updateBio()"></i>
-          </span>
-          <span *ngIf="!isEditable">
-            <p>{{ user?.bio }}</p>
-            <i class="bi bi-pencil" (click)="editBio()"></i>
-          </span>
-        </p>
-
-
       </div>
-    </div>
-    <div class="images">
-      <div class="image"></div>
-      <div class="image"></div>
-      <div class="image"></div>
-      <div class="image"></div>
-
     </div>
   </div>
-
-  <div class="container">
-    <div class="profile-page tx-13">
-        <div class="row">
-            <div class="col-12 grid-margin">
-                <div class="profile-header">
-                    <div class="cover">
-                        <div class="gray-shade"></div>
-                        <figure>
-                            <img src="https://bootdey.com/img/Content/bg1.jpg" class="img-css" alt="profile cover">
-                        </figure>
-                        <div class="cover-body d-flex justify-content-between align-items-center">
-                            <div>
-                                <img class="profile-pic" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="profile">
-                                <span class="profile-name">Amiah Burton</span>
-                            </div>
-                            <div class=" d-md-block">
-                                <button class="btn btn-primary btn-icon-text btn-edit-profile">
-                                  qr-code
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="container border mt-5">
+    <div class="row gy-5 py-5">
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+        <div class="image bg-danger" style="height: 300px"></div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+        <div class="image bg-danger" style="height: 300px"></div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+        <div class="image bg-danger" style="height: 300px"></div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+        <div class="image bg-danger" style="height: 300px"></div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+        <div class="image bg-danger" style="height: 300px"></div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+        <div class="image bg-danger" style="height: 300px"></div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+        <div class="image bg-danger" style="height: 300px"></div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+        <div class="image bg-danger" style="height: 300px"></div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+        <div class="image bg-danger" style="height: 300px"></div>
+      </div>
     </div>
   </div>
 </div>
