--- a/src/app/modules/user/layouts/profil/profil.component.scss
+++ b/src/app/modules/user/layouts/profil/profil.component.scss
@@ -1,241 +1,258 @@
+.imgProfil {
+  width: 120px;
+  height: 120px;
 
-.profil {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 5rem 2rem;
-
-  .header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    .content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 40%;
-      img {
-        width: 100%;
-        border-radius: 50%;
-        max-width: 300px;
-      }
-    }
-    .description {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: space-evenly;
-      width: 60%;
-      padding: 2rem;
-      .pseudo {
-        font-size: 1.5rem;
-        font-weight: bold;
-      }
-
-      .followers {
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        .number {
-          font-size: 1rem;
-          font-weight: bold;
-        }
-      }
-
-      .bio {
-        font-size: 1rem;
-        width: 100%;
-        span {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          justify-content: space-between;
-          p {
-            width: 90%;
-            overflow: hidden;
-            textarea {
-              width: 100%;
-            }
-          }
-          i {
-            font-size: 18px;
-            cursor: pointer;
-          }
-        }
-
-      }
-    }
+  @media (min-width: 768px) {
+    width: 150px;
+    height: 150px;
   }
 
-  .images {
-    margin-top: 5rem;
-    border-top: #f2f4f9 solid 0.1rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    width: 100%;
-    .image {
-      margin: 0.5rem;
-      display: flex;
-      background-color: red;
-      width: 200px;
-      height: 200px;
-    }
+  // Large devices (desktops, 992px and up)
+  @media (min-width: 992px) {
+    width: 180px;
+    height: 180px;
+  }
+
+  // X-Large devices (large desktops, 1200px and up)
+  @media (min-width: 1200px) {
+    width: 200px;
+    height: 200px;
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .profil {
-    margin: 10rem 5rem;
-  }
-}
+// .profil {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
 
-.profile-header {
-  box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-  border: 1px solid #f2f4f9;
-}
+//   .header {
+//     display: flex;
+//     flex-direction: row;
+//     align-items: center;
+//     justify-content: space-between;
+//     width: 100%;
+//     .content {
+//       display: flex;
+//       flex-direction: column;
+//       align-items: center;
+//       width: 40%;
+//       img {
+//         width: 100%;
+//         border-radius: 50%;
+//         max-width: 300px;
+//       }
+//     }
+//     .description {
+//       display: flex;
+//       flex-direction: column;
+//       align-items: flex-start;
+//       justify-content: space-evenly;
+//       width: 60%;
+//       padding: 2rem;
+//       .pseudo {
+//         font-size: 1.5rem;
+//         font-weight: bold;
+//       }
 
-.profile-header .cover {
-  position: relative;
-  border-radius: .25rem .25rem 0 0;
-}
+//       .followers {
+//         margin-top: 1rem;
+//         margin-bottom: 1rem;
+//         display: flex;
+//         flex-direction: row;
+//         align-items: center;
+//         justify-content: space-between;
+//         width: 100%;
+//         .number {
+//           font-size: 1rem;
+//           font-weight: bold;
+//         }
+//       }
 
+//       .bio {
+//         font-size: 1rem;
+//         width: 100%;
+//         span {
+//           display: flex;
+//           flex-direction: row;
+//           align-items: center;
+//           justify-content: space-between;
+//           p {
+//             width: 90%;
+//             overflow: hidden;
+//             textarea {
+//               width: 100%;
+//             }
+//           }
+//           i {
+//             font-size: 18px;
+//             cursor: pointer;
+//           }
+//         }
+//       }
+//     }
+//   }
 
-.profile-header .cover figure {
-  margin-bottom: 0;
-}
+//   .images {
+//     margin-top: 5rem;
+//     border-top: #f2f4f9 solid 0.1rem;
+//     display: flex;
+//     flex-direction: row;
+//     align-items: center;
+//     justify-content: flex-start;
+//     flex-wrap: wrap;
+//     width: 100%;
+//     .image {
+//       margin: 0.5rem;
+//       display: flex;
+//       background-color: red;
+//       width: 200px;
+//       height: 200px;
+//     }
+//   }
+// }
 
-@media (max-width: 767px) {
-    .profile-header .cover figure {
-      height: 110px;
-      overflow: hidden;
-  }
-}
+// @media screen and (min-width: 1200px) {
+//   .profil {
+//   }
+// }
 
-@media (min-width: 2400px) {
-    .profile-header .cover figure {
-      height: 280px;
-      overflow: hidden;
-  }
-}
+// .profile-header {
+//   box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
+//   border: 1px solid #f2f4f9;
+// }
 
-.profile-header .cover figure img {
-  border-radius: .25rem .25rem 0 0;
-  width: 100%;
-}
+// .profile-header .cover {
+//   position: relative;
+//   border-radius: 0.25rem 0.25rem 0 0;
+// }
 
-@media (max-width: 767px) {
-    .profile-header .cover figure img {
-      -webkit-transform: scale(2);
-      transform: scale(2);
-      margin-top: 15px;
-  }
-}
+// .profile-header .cover figure {
+//   margin-bottom: 0;
+// }
 
-@media (min-width: 2400px) {
-    .profile-header .cover figure img {
-      margin-top: -55px;
-  }
-}
+// @media (max-width: 767px) {
+//   .profile-header .cover figure {
+//     height: 110px;
+//     overflow: hidden;
+//   }
+// }
 
-.profile-header .cover .gray-shade {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  background: linear-gradient(rgba(255, 255, 255, 0.1), #fff 99%);
-}
+// @media (min-width: 2400px) {
+//   .profile-header .cover figure {
+//     height: 280px;
+//     overflow: hidden;
+//   }
+// }
 
-.profile-header .cover .cover-body {
-  position: absolute;
-  bottom: -20px;
-  left: 0;
-  z-index: 2;
-  width: 100%;
-  padding: 0 20px;
-}
+// .profile-header .cover figure img {
+//   border-radius: 0.25rem 0.25rem 0 0;
+//   width: 100%;
+// }
 
-.profile-header .cover .cover-body .profile-pic {
-  border-radius: 50%;
-  width: 100px;
-}
+// @media (max-width: 767px) {
+//   .profile-header .cover figure img {
+//     -webkit-transform: scale(2);
+//     transform: scale(2);
+//     margin-top: 15px;
+//   }
+// }
 
-@media (max-width: 767px) {
-    .profile-header .cover .cover-body .profile-pic {
-      width: 70px;
-  }
-}
+// @media (min-width: 2400px) {
+//   .profile-header .cover figure img {
+//     margin-top: -55px;
+//   }
+// }
 
-.profile-header .cover .cover-body .profile-name {
-  font-size: 20px;
-  font-weight: 600;
-  margin-left: 17px;
-}
+// .profile-header .cover .gray-shade {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   z-index: 1;
+//   background: linear-gradient(rgba(255, 255, 255, 0.1), #fff 99%);
+// }
 
-.profile-body .left-wrapper .social-links a {
-  width: 30px;
-  height: 30px;
-}
+// .profile-header .cover .cover-body {
+//   position: absolute;
+//   bottom: -20px;
+//   left: 0;
+//   z-index: 2;
+//   width: 100%;
+//   padding: 0 20px;
+// }
 
-.profile-body .right-wrapper .latest-photos > .row {
-  margin-right: 0;
-  margin-left: 0;
-}
+// .profile-header .cover .cover-body .profile-pic {
+//   border-radius: 50%;
+//   width: 100px;
+// }
 
-.profile-body .right-wrapper .latest-photos > .row > div {
-  padding-left: 3px;
-  padding-right: 3px;
-}
+// @media (max-width: 767px) {
+//   .profile-header .cover .cover-body .profile-pic {
+//     width: 70px;
+//   }
+// }
 
-.profile-body .right-wrapper .latest-photos > .row > div figure {
-  -webkit-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-  margin-bottom: 6px;
-}
+// .profile-header .cover .cover-body .profile-name {
+//   font-size: 20px;
+//   font-weight: 600;
+//   margin-left: 17px;
+// }
 
-.profile-body .right-wrapper .latest-photos > .row > div figure:hover {
-  -webkit-transform: scale(1.06);
-  transform: scale(1.06);
-}
+// .profile-body .left-wrapper .social-links a {
+//   width: 30px;
+//   height: 30px;
+// }
 
-.profile-body .right-wrapper .latest-photos > .row > div figure img {
-  border-radius: .25rem;
-}
+// .profile-body .right-wrapper .latest-photos > .row {
+//   margin-right: 0;
+//   margin-left: 0;
+// }
 
-.rtl   .profile-header .cover .cover-body .profile-name {
-  margin-left: 0;
-  margin-right: 17px;
-}
-.img-xs {
-  width: 37px;
-  height: 37px;
-}
-.rounded-circle {
-  border-radius: 50% !important;
-}
-img {
-  vertical-align: middle;
-  border-style: none;
-}
+// .profile-body .right-wrapper .latest-photos > .row > div {
+//   padding-left: 3px;
+//   padding-right: 3px;
+// }
 
-.grid-margin {
-  margin-bottom: 1rem;
-}
+// .profile-body .right-wrapper .latest-photos > .row > div figure {
+//   -webkit-transition: all 0.3s ease-in-out;
+//   transition: all 0.3s ease-in-out;
+//   margin-bottom: 6px;
+// }
 
-.rounded {
-  border-radius: 0.25rem !important;
-}
+// .profile-body .right-wrapper .latest-photos > .row > div figure:hover {
+//   -webkit-transform: scale(1.06);
+//   transform: scale(1.06);
+// }
 
-.img-css {
-height: 150px;
-}
+// .profile-body .right-wrapper .latest-photos > .row > div figure img {
+//   border-radius: 0.25rem;
+// }
+
+// .rtl .profile-header .cover .cover-body .profile-name {
+//   margin-left: 0;
+//   margin-right: 17px;
+// }
+// .img-xs {
+//   width: 37px;
+//   height: 37px;
+// }
+// .rounded-circle {
+//   border-radius: 50% !important;
+// }
+// img {
+//   vertical-align: middle;
+//   border-style: none;
+// }
+
+// .grid-margin {
+//   margin-bottom: 1rem;
+// }
+
+// .rounded {
+//   border-radius: 0.25rem !important;
+// }
+
+// .img-css {
+//   height: 150px;
+// }
