--- a/src/app/layouts/user-layout/navbar/navbar.component.scss
+++ b/src/app/layouts/user-layout/navbar/navbar.component.scss
@@ -8,7 +8,11 @@ i {
 }
 
 .text-dark {
-  letter-spacing: 0.3rem;
+  letter-spacing: 0.1rem;
+  font-size: 1.3rem;
+  @media (min-width: 425px) {
+    letter-spacing: 0.3rem;
+  }
 }
 
 .navbar {
