--- a/src/app/modules/user/layouts/profil/profil.component.html
+++ b/src/app/modules/user/layouts/profil/profil.component.html
@@ -11,7 +11,7 @@
       <div class="col-8">
         <div class="row">
           <div class="col-12">
-            <p class="pseudo">{{ user?.firstName }} {{ user?.lastName }}</p>
+            <p class="fw-bold firstAndLastname">{{ user?.firstName }} {{ user?.lastName }}</p>
           </div>
           <div class="col-4">X photos</div>
           <div class="col-4">X followin</div>
