--- a/src/app/modules/user/layouts/profil/profil.component.scss
+++ b/src/app/modules/user/layouts/profil/profil.component.scss
@@ -1,6 +1,11 @@
 .imgProfil {
-  width: 120px;
-  height: 120px;
+  width: 90px;
+  height: 90px;
+
+  @media (min-width: 425px) {
+    width: 120px;
+    height: 120px;
+  }
 
   @media (min-width: 768px) {
     width: 150px;
@@ -18,6 +23,11 @@
     width: 200px;
     height: 200px;
   }
+}
+
+.firstAndLastname {
+  letter-spacing: 0.1rem;
+  font-size: 18px;
 }
 
 // .profil {
