--- a/src/app/modules/guest/layouts/password-reset/password-reset.component.scss
+++ b/src/app/modules/guest/layouts/password-reset/password-reset.component.scss
@@ -5,13 +5,6 @@
   width: 100%;
   .mainRow {
     max-width: 350px;
-    .titleCard {
-      font-size: 2.5rem;
-      margin-bottom: 50px;
-    }
-    .alert{
-      width: 90%;
-    }
     .colCard,
     .colCardSecond {
       background: rgb(250, 250, 250);
@@ -20,14 +13,6 @@
         border-radius: 5px;
         border: 1px solid rgb(219, 219, 219);
         background: white;
-      }
-    }
-    .forgotPassword {
-      cursor: pointer;
-    }
-    .google {
-      button {
-        color: blue;
       }
     }
     .colCardSecond {
@@ -41,7 +26,9 @@
       }
     }
   }
-
+  .redirectRegister{
+    cursor: pointer;
+  }
   mat-form-field.mat-form-field {
     width: 90%;
     font-size: 13px;
