--- a/src/app/layouts/user-layout/navbar/navbar.component.html
+++ b/src/app/layouts/user-layout/navbar/navbar.component.html
@@ -5,18 +5,11 @@
     </div>
     <div class="col-8">
       <form class="d-flex flex-column">
-        <input
-          class="form-control me-2"
-          type="search"
-          [formControl]="pseudo"
-          (keyup)="search($event)"
-          placeholder="Search by name"
-        />
+        <input class="form-control me-2" type="search" [formControl]="pseudo" (keyup)="search($event)"
+          placeholder="Search by name" />
 
         <div class="mt-2 ms-1 dropdownSearch" *ngIf="bUser">
-          <a class="dropdown-item" href="#"
-            >{{ user.pseudo }} ({{ user.lastName }} {{ user.firstName }})</a
-          >
+          <a class="dropdown-item" href="#">{{ user.pseudo }} ({{ user.lastName }} {{ user.firstName }})</a>
           <hr />
         </div>
       </form>
@@ -26,65 +19,41 @@
 
 <nav class="navbar navbar-expand navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand ms-3 h2 text-dark" href="#"
-      ><img
-        src="/assets/images/instaclo.png"
-        width="36"
-        height="36"
-        class="me-2"
-      />
-      Instaclo</a
-    >
+    <a class="navbar-brand ms-3 h2 text-dark" href="#"><img src="/assets/images/instaclo.png" width="36" height="36"
+        class="me-2" />
+      Instaclo</a>
     <div class="navbarContent" id="navbarSupportedContent">
       <form class="d-md-flex mx-auto d-none flex-column">
-        <input
-          class="form-control me-2"
-          type="search"
-          [formControl]="pseudo"
-          (keyup)="search($event)"
-          placeholder="Search by name"
-        />
+        <input class="form-control me-2" type="search" [formControl]="pseudo" (keyup)="search($event)"
+          placeholder="Search by name" />
         <div class="mt-2 ms-1 dropdownSearch" *ngIf="bUser">
-          <a class="dropdown-item" href="#"
-            >{{ user.pseudo }} ({{ user.lastName }} {{ user.firstName }})</a
-          >
+          <a class="dropdown-item" href="#">{{ user.pseudo }} ({{ user.lastName }} {{ user.firstName }})</a>
           <hr />
         </div>
       </form>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item px-3 px-md-0">
-          <a class="nav-link active" [routerLink]="['/user/home']"
-            ><i class="bi bi-house-door-fill"></i
-          ></a>
+          <a class="nav-link active" [routerLink]="['/user/home']"><i class="bi bi-house-door-fill"></i></a>
         </li>
         <li class="nav-item px-3 px-md-0">
-          <a class="nav-link" [routerLink]="['/user/chat']"
-            ><i class="bi bi-send"></i>
+          <a class="nav-link" [routerLink]="['/user/chat']"><i class="bi bi-send"></i>
           </a>
         </li>
         <li class="nav-item dropdown d-none d-md-block">
-          <a
-            class="nav-link dropdown"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
+          <a class="nav-link dropdown" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             <i class="bi bi-person-circle"></i>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
-              <a class="dropdown-item" [routerLink]="['/user/profil']"
-                >Profil</a
-              >
+              <a class="dropdown-item" [routerLink]="['/user/profil']">Profil</a>
             </li>
             <li>
-              <a class="dropdown-item" [routerLink]="['/user/edit-profil']"
-                >Paramètres</a
-              >
+              <a class="dropdown-item" [routerLink]="['/user/edit-profil']">Paramètres</a>
             </li>
-            <li><hr class="dropdown-divider" /></li>
+            <li>
+              <hr class="dropdown-divider" />
+            </li>
             <li (click)="signOut()">
               <a class="dropdown-item" href="#">Déconnexion</a>
             </li>
@@ -96,8 +65,7 @@
           </a>
         </li>
         <li class="nav-item px-3 px-md-0 d-block d-md-none">
-          <a class="nav-link" (click)="signOut()"
-            ><i class="bi bi-power"></i>
+          <a class="nav-link" (click)="signOut()"><i class="bi bi-power"></i>
           </a>
         </li>
       </ul>
