Améliroation de la search bar

--- a/src/app/modules/guest/layouts/register/register.component.html
+++ b/src/app/modules/guest/layouts/register/register.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="google">
           <button type="button" class="btn googleBtn" (click)="googleLogin()">
-            <i class="bi bi-google"></i> Se connecter avec Google
+            <i class="bi bi-google"></i> S'inscrire avec Google
           </button>
         </div>
         <div class="mb-2">ou</div>
