--- a/src/app/modules/user/layouts/profil/profil.component.html
+++ b/src/app/modules/user/layouts/profil/profil.component.html
@@ -30,34 +30,10 @@
       </div>
     </div>
   </div>
-  <div class="container border mt-5">
-    <div class="row gy-5 py-5">
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="image bg-danger" style="height: 300px"></div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="image bg-danger" style="height: 300px"></div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="image bg-danger" style="height: 300px"></div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="image bg-danger" style="height: 300px"></div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="image bg-danger" style="height: 300px"></div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="image bg-danger" style="height: 300px"></div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="image bg-danger" style="height: 300px"></div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="image bg-danger" style="height: 300px"></div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="image bg-danger" style="height: 300px"></div>
+  <div class="container border mt-5" >
+    <div class="row gy-5 py-5" >
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3" *ngFor="let image of images">
+        <img [src]="image.path" style="height: 300px; width : 300px" >
       </div>
     </div>
   </div>
