--- a/src/app/modules/user/layouts/profil/profil.component.html
+++ b/src/app/modules/user/layouts/profil/profil.component.html
@@ -11,13 +11,13 @@
       <div class="col-8">
         <div class="row">
           <div class="col-12">
-            <p class="fw-bold firstAndLastname">{{ user?.firstName }} {{ user?.lastName }}</p>
+            <p class="fw-bold firstAndLastname">{{ user.firstName }} {{ user.lastName }}</p>
           </div>
           <div class="col-4">X photos</div>
           <div class="col-4">X followin</div>
           <div class="col-4">X followers</div>
-          <div class="col-12">{{ user?.pseudo }}</div>
-          <div class="col-12">{{ user?.bio }}</div>
+          <div class="col-12">{{ user.pseudo }}</div>
+          <div class="col-12">{{ user.bio }}</div>
           <div class="col-12">
             <button
               class="btn btn-secondary btn-sm"
