--- a/src/app/modules/user/layouts/home/home.component.html
+++ b/src/app/modules/user/layouts/home/home.component.html
@@ -1,4 +1,3 @@
-<p class="main">
-  Home works!
-</p>
-
+<ng-container *ngFor="let image of listFollowsImages">
+  <app-card-image [image]="image"></app-card-image>
+</ng-container>
