--- a/src/app/modules/user/layouts/profil/profil.component.html
+++ b/src/app/modules/user/layouts/profil/profil.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-4 text-center">
         <img
-          src="/assets/images/blank-profile.png"
+          [src]="user.profilImage"
           alt="image"
           class="rounded-circle imgProfil"
         />
