--- a/src/app/layouts/user-layout/navbar/navbar.component.scss
+++ b/src/app/layouts/user-layout/navbar/navbar.component.scss
@@ -8,7 +8,25 @@ i {
 }
 .dropdownSearch {
   position: absolute;
-  top: 55px;
+  top: 46px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 100px;
+  z-index: 99999;
+  background-color: rgb(248, 249, 250);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  width: -webkit-fill-available;
+
+  @media (min-width: 768px) {
+    top: 52px;
+    width: 233px;
+  }
+  .dropdown-item{
+    margin: 0.5rem 0rem 0.5rem 0.3rem;
+  }
+  hr{
+    margin: 0;
+  }
 }
 
 .text-dark {
@@ -62,6 +80,11 @@ input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
 
+.form-control:focus {
+  border-color: rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 
 
 
