--- a/src/app/modules/user/layouts/profil/profil.component.scss
+++ b/src/app/modules/user/layouts/profil/profil.component.scss
@@ -1,12 +1,8 @@
 .imgProfil {
   width: 100px;
   height: 100px;
-
-  //width: 90px;
-  //height: 90px;
-  //object-fit: cover;
-  //border-radius: 50%;
-  //background-size: cover;
+  object-fit: cover;
+  background-size: cover;
 
   @media (min-width: 425px) {
     width: 120px;
@@ -33,8 +29,6 @@
   @media (min-width: 1200px) {
     width: 250px;
     height: 250px;
-    //width: 200px;
-    //height: 200px;
   }
 }
 
