quick modif update

--- a/src/app/modules/user/layouts/profil/profil.component.html
+++ b/src/app/modules/user/layouts/profil/profil.component.html
@@ -18,12 +18,12 @@
             <span class="secondTitleNumber">Publications</span>
           </div>
           <div class="col-4 text-center">
-            <span class="fw-bold">{{ followLength }}</span>
+            <span class="fw-bold">{{ user.follows.length }}</span>
             <br>
             <span class="secondTitleNumber">Followers</span>
           </div>
           <div class="col-4 text-center">
-            <span class=" fw-bold">{{ followerLength }}</span>
+            <span class="fw-bold">{{ user.followers.length }}</span>
             <br>
             <span class="secondTitleNumber">Suivi(e)s</span>
           </div>
