--- a/src/app/layouts/user-layout/navbar/navbar.component.html
+++ b/src/app/layouts/user-layout/navbar/navbar.component.html
@@ -46,6 +46,10 @@
           <a class="nav-link active" [routerLink]="['/user/home']"><i class="bi bi-house-door-fill"></i></a>
         </li>
         <li class="nav-item px-3 px-md-0">
+          <a class="nav-link" [routerLink]="['/user/photos']"><i class="bi bi-camera"></i>
+          </a>
+        </li>
+        <li class="nav-item px-3 px-md-0">
           <a class="nav-link" [routerLink]="['/user/chat']"><i class="bi bi-send"></i>
           </a>
         </li>
