--- a/src/app/modules/user/layouts/photos/photos.component.html
+++ b/src/app/modules/user/layouts/photos/photos.component.html
@@ -1,3 +1,10 @@
-<p>
-  photos works!
-</p>
+<div class="container">
+  <video #videoPlayer>
+  </video>
+  <div class="buttons">
+    <button (click)="start()">Start</button>
+    <button (click)="stop()">Stop</button>
+    <button (click)="switchCamera()">SwitchCamera</button>
+    <button (click)="takePhoto()">TakePhoto</button>
+  </div>
+</div>
