--- a/src/app/modules/user/layouts/chat-list/chat-list.component.scss
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.scss
@@ -7,3 +7,10 @@
 .link-chat:hover {
   background-color: #e4e4e4;
 }
+.mainContainer{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
