--- a/src/app/modules/user/layouts/chat/chat.component.html
+++ b/src/app/modules/user/layouts/chat/chat.component.html
@@ -28,6 +28,9 @@
          <span class="bg-info">{{message.message}}</span>
      </div>
     <ng-template #testMessage><span class="bg-danger">{{message.message}}</span></ng-template>
+    <p>
+      <small>{{message.pseudo_user}}</small>
+    </p>
   </div>
 </div>
 
